azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v3.0.0/Set-AzureRmApplicationGateway.md
---
external help file: Microsoft.Azure.Commands.Network.dll-Help.xml
online version: 949fe8e9-8f59-4355-9561-dd92dc70df8b
schema: 2.0.0
ms.assetid: ABA381D7-813E-4741-95E0-DAAC6051B784
---

# Set-AzureRmApplicationGateway

## SYNOPSIS
Updates an application gateway.

## SYNTAX

```
Set-AzureRmApplicationGateway -ApplicationGateway <PSApplicationGateway> [<CommonParameters>]
```

## DESCRIPTION
The **Set-AzureRmApplicationGateway** cmdlet updates an Azure application gateway.

## EXAMPLES

### Example 1: Update an application gateway
```
PS C:\>$UpdatedAppGw = Set-AzureRmApplicationGateway -ApplicationGateway $AppGw
```

This command updates the application gateway with settings in the $AppGw variable and stores the updated gateway in the $UpdatedAppGw variable.

## PARAMETERS

### -ApplicationGateway
Specifies an application gateway object representing the state to which the application gateway should be set.

```yaml
Type: PSApplicationGateway
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Start-AzureRmApplicationGateway](./Start-AzureRmApplicationGateway.md)


